--- a/assets/links.css
+++ b/assets/links.css
@@ -1,19 +1,57 @@
+div.friend_link_block{
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+/*	border-style: solid; 
+  	border-width: 2px;*/
+  	width: 100%;
+}
+
 div.friend_link{
 	height: 100px;
-	/*text-decoration: none;*/
-	/*border-style: solid; */
-  	/*border-width: 2px;*/
+  	width: 100%;
+  	text-align: center;
+}
+
+@media (min-width: 600px){
+	div.friend_link{
+		width: 50%;
+	}
+}
+
+div.friend_block{
+	width: 80%;
+	height: 80%;
+	background-color: white;
+	margin-left: 10%;
 }
 
 img.friend_link_icon{
+
 	border-radius: 50%; 
 	float: left;
-	width: 100px;
-    height: 100px;	
+	width: 75px;
+    height: 75px;	
+    margin-top: 2px;
+    margin-left: 10px;
 }
 div.friend_link_info{
-	margin-left: 50px;
-	border: 2px solid rgb(255, 102, 102);
-	height: 96px;
-	/*float: left;*/
+	margin-left: 100px;
+	/*border: 2px solid rgb(255, 102, 102);*/
+	height: 100%;
+	/*width: calc(100%-75px);*/
+	/*float: right;*/
+	padding: 5px;
+}
+div.friend_link_title{
+	/*text-align: center;*/
+
+}
+a.friend_link_title{
+	font-size: 20px;
+	/*position: center;*/
+}
+div.friend_link_details{
+	/*text-align: center;*/
 }
