--- a/assets/header.css
+++ b/assets/header.css
@@ -19,5 +19,7 @@ a.btn:hover{
 
 .headother{
 	padding: 10px;
-	margin-bottom: 2px;
+	margin-bottom: 20px;
+	text-align: center;
+	background-color: #2c2a2a;
 }
