--- a/FC/assets/footer.css
+++ b/FC/assets/footer.css
@@ -1,7 +1,8 @@
 div.foot{
 	padding: 20px;
-	margin-bottom: 2px;	
+	margin-bottom: 20px;	
 	/*color: red;*/
 	background-color: #2c2a2a;
 	border-radius: 35px;
+	text-align: center;
 }
