--- a/FC/assets/links.css
+++ b/FC/assets/links.css
@@ -26,6 +26,17 @@ div.friend_block{
 	background-color: white;
 	margin-left: 10%;
 	border-radius: 15px;
+	-webkit-transition: all 250ms cubic-bezier(0.02, 0.01, 0.47, 1);
+	transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+div.friend_block:hover{
+	box-shadow: 0 16px 32px 0 rgba(211, 231, 225, 0.15);
+	transform: translate(0,-5px);
+	transition-delay: 0s !important;
+}
+div.friend_block_shadow{
+	-webkit-box-shadow: 0 0.25rem 1rem rgba(211, 231, 225, 0.15);
+	box-shadow: 0 4px 16px rgba(211, 231, 225, 0.15);
 }
 
 img.friend_link_icon{
