--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -32,13 +32,13 @@ div.bring{
 }
 @keyframes mainContainer{
 	0%{opacity: 0.8}
-	10%{opacity: 0.5}
+	10%{opacity: 0.7}
 	20%{opacity: 0.9}
 	30%{opacity: 0.7}
 	40%{opacity: 0.9}
 	50%{opacity: 1}
 	60%{opacity: 0.9}
-	70%{opacity: 0.6}
+	70%{opacity: 0.8}
 	80%{opacity: 0.9}
 	90%{opacity: 0.8}
 	100%{opacity: 0.9}
@@ -72,6 +72,13 @@ div.box-shadow {
 	-webkit-box-shadow: 0 0.25rem 1rem rgba(211, 231, 225, 0.15);
 	box-shadow: 0 4px 16px rgba(211, 231, 225, 0.15);
 }
+
+div.postdiv{
+	padding: 20px;
+	margin-bottom: 50px;
+	background-color: #2c2a2a;	
+}
+
 
 /* ===================== 颜色 ====================*/
 .blue{
@@ -132,13 +139,6 @@ span.tags a:hover{
 	padding: 20px;
 	margin-bottom: 50px;
 	background-color: #2c2a2a;	
-	-webkit-transition: all 250ms cubic-bezier(0.02, 0.01, 0.47, 1);
-	transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-}
-.comsother:hover{
-	box-shadow: 0 16px 32px 0 rgba(211, 231, 225, 0.15);
-	transform: translate(0,-5px);
-	transition-delay: 0s !important;
 }
 
 
