--- a/FC/assets/comments.css
+++ b/FC/assets/comments.css
@@ -17,14 +17,15 @@ img.avatar{
     border-radius: 50%; 
 	border: 1px solid rgb(55,152,218);
 	padding: 2px;
-	margin-bottom: -25px;
+	margin-bottom: -16px;
 }
 /* 评论者链接 */
 span.authorurl{
-	color: rgb(255, 102, 102);
+	color: rgb(240, 240, 240);
 	font-weight: 700;
 	font-size: 24px;
 	font-style: normal;
+	/*margin-top: -55px;*/
 }
 span.authorurl a{
 	color: rgb(255, 105, 180);
@@ -74,7 +75,7 @@ a.idenfy{
 	font-size: 18px;
 	font-weight: 700;
 	padding: 2px;
-	color: rgb(255, 105, 180);
+	color: rgb(255,128,192);
 	text-decoration: none;
 }
 
@@ -82,7 +83,7 @@ a.idenfy{
 button.submitcom{
 	padding: 2px;
 	/*margin: 5px;*/
-	color: rgb(255, 105, 180);
+	color: rgb(255,128,192);
 	/*color: rgb(4,26,37);*/
 	background: rgb(4,26,37);
 	text-decoration: none;
@@ -91,10 +92,10 @@ button.submitcom{
 	font-weight: bold;
 	border-style: solid; 
   	border-width: 2px;
-  	border-color: rgb(255, 105, 180);
+  	border-color: rgb(255,128,192);
 }
 button.submitcom:hover{
-	background: rgb(255, 105, 180);
+	background: rgb(255,128,192);
 	color: rgb(4,26,37);
 	text-shadow: 0px 0px 5px rgb(4,26,37);
 }
