--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -10,8 +10,14 @@ a{
 	font-size: 18px;
 	font-weight: 700;
 	/*padding: 2px;*/
-	color: rgb(255, 105, 180);
+	/*color: rgb(255, 105, 180);*/
+	color: rgb(255,128,192);
 	text-decoration: none;
+}
+a:hover{
+	background: transparent;
+	color: rgb(255, 105, 180);
+	text-shadow: 0px 0px 5px rgb(4,26,37);
 }
 
 div.mainContainer{
@@ -102,7 +108,7 @@ a.articletitle{
 }
 
 h1.at{
-	font-family: 'Black Ops One', cursive;
+	font-family: STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑";
 	font-size: 28px;
 }
 div.tips{
@@ -116,7 +122,7 @@ div.articletag{
 span.tags a{
 	padding: 2px;
 	/*margin: 5px;*/
-	color: rgb(255, 105, 180);
+	color: rgb(255,128,192);
 	/*color: rgb(4,26,37);*/
 	/*background: rgb(255, 105, 180);*/
 	text-decoration: none;
@@ -181,8 +187,10 @@ ol.page-navigator li.current a{
 
 /* ============================= 正文 =========================*/
 div.contents{
+	font-family: STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑";
 	padding: 15px 5px;
-	line-height: 1.8;
+	line-height: 1.5;
+	font-size: 18px;
 }
 figure.aligncenter{
 	margin-left: 0px;
@@ -190,4 +198,11 @@ figure.aligncenter{
 }
 figure.aligncenter img{
 	max-width: 80%
+}
+/* =============================== 字体 ====================== */
+.font_style{
+	font-family: STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑";
+	/*padding: 15px 5px;*/
+	line-height: 1.3;
+	font-size: 18px;
 }
