--- a/FC/assets/footer.css
+++ b/FC/assets/footer.css
@@ -2,7 +2,7 @@ div.foot{
 	padding: 20px;
 	margin-bottom: 20px;	
 	/*color: red;*/
-	background-color: #2c2a2a;
+	/*background-color: #2c2a2a;*/
 	border-radius: 35px;
 	text-align: center;
 }
