--- a/FC/assets/header.css
+++ b/FC/assets/header.css
@@ -8,7 +8,7 @@ ol.header_list li{
 }
 
 a.header_pages_title{
-	color: rgb(240, 240, 240);
+	/*color: rgb(240, 240, 240);*/
 	font-size: 25px;
 	margin: 0 10px;
 }
@@ -18,5 +18,5 @@ a.header_pages_title{
 	padding: 10px;
 	margin-bottom: 20px;
 	text-align: center;
-	background-color: #2c2a2a;
+	
 }
