--- a/FC/assets/header.css
+++ b/FC/assets/header.css
@@ -1,22 +1,82 @@
-ol.header_list{
-	display: inline-block;
+div.index_header{
+	width: 100%;
+}
+
+div.header_nav_button{
+	display: none;
+	float: right;
+	margin-top: 5px;
+}
+div.header_nav{
+	height: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+ul.header_nav_bar{
 	list-style: none;
-	padding-inline-start:0px;
+    float: right;
+    line-height: 50px;
 }
-ol.header_list li{
-	display: inline;
-}
-
-a.header_pages_title{
-	/*color: rgb(240, 240, 240);*/
-	font-size: 25px;
-	margin: 0 10px;
+ul.header_nav_bar li{
+    float: left;
+    padding: 0 10px;
 }
 
+#toggle {
+    float: left;
+    display: none;
+    margin-top: 5px;
+    border: 0;
+    border-radius: 5px;
+    width: 28px;
+    height: 30px;
+  /*width: 28px;*/
+  /*height: 30px;*/
+  /*margin: 10px auto;*/
+}
+#toggle div {
+  /*width: 100%;*/
+  height: 5px;
+  margin-top: 5px;
+  background: black;
+  margin: 4px auto;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+}
 
-.headother{
-	padding: 10px;
-	margin-bottom: 20px;
-	text-align: center;
-	
+#toggle.on .one {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+#toggle.on .two {
+  opacity: 0;
+}
+
+#toggle.on .three {
+  transform: rotate(-45deg) translate(7px, -8px);
+}
+
+/*========= media ============*/
+@media screen and (max-width: 768px){
+    div.index_header {
+        padding: 10px 5%;
+        height: 50px;
+        overflow: hidden;
+    }
+    #toggle{
+        display: block;
+    }
+    div.header_nav_button {
+        display: block;
+    }
+    ul.header_nav_bar {
+        margin-top: 15px;
+        border-top: solid 1px #111;
+        width:100%;
+    }
+   ul.header_nav_bar li {
+        float: none;
+        padding: 0 10px;
+    }
+
 }
