--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -1,11 +1,26 @@
 body{
-	/*background-color: rgb(4,26,37);*/
+	
 	font-size: 16px;
-  	/*font-family: 'Source Code Pro', monospace;*/
   	font-family: STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑";
 
   	width:100%;
 	height:100%;
+	word-wrap:break-word;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    background-color: #555;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(0 0 0 / 30%);
+    border-radius: 10px;
+    background-color: #F5F5F5;
 }
 
 body.Tblack{
@@ -65,7 +80,7 @@ div.indiv{
 	/*border-style: solid; */
   	/*border-width: 2px;*/
   	/*border-color: rgb(55,152,218);*/
-	border-radius: 25px;
+	border-radius: 15px;
   	/*margin-top: 3px;*/
 	box-shadow: 0 4px 16px rgba(211, 231, 225, 0.15);
 }
@@ -101,7 +116,7 @@ div.postdiv{
 }
 
 .green{
-	color: rgb(144, 238, 144);
+	color: rgb(34, 139, 34);
 }
 .blue-green{
 	/*color: rgb(0, 255, 255);*/
@@ -111,6 +126,9 @@ div.postdiv{
 	color: rgb(240, 240, 240);
 }
 /* 主题配色: 黑白; */
+.bodyTheme0{
+	background-color: rgb(240, 240, 240);
+}
 .backTheme0{
 	background-color: rgb(44, 42, 42);
 }
@@ -119,6 +137,9 @@ div.postdiv{
 }
 
 /* 主题配色: 白黑; */
+.bodyTheme1{
+	background-color: rgb(44, 42, 42);
+}
 .backTheme1{
 	background-color: rgb(246, 246, 243);
 }
@@ -222,6 +243,8 @@ div.contents{
 	padding: 15px 5px;
 	line-height: 1.5;
 	font-size: 18px;
+	font-weight: 500;
+	max-width: 100%;
 }
 figure{
 	margin-inline-start: 0px;
@@ -232,10 +255,176 @@ figure{
 figure img{
 	max-width: 90%;
 }
+
+/* 文章尾部信息*/
+div.contents_tail_info{
+	background-color: rgb(219, 231, 248);
+	/*width: 80%;*/
+	margin: 0px;
+	padding: 10px;
+	border-radius: 5px;
+	color: rgb(105, 89, 205);
+}
+div.contents_tail_info p{
+	margin: 0px;
+}
+
+
 /* =============================== 字体 ====================== */
 .font_style{
 	font-family: STXihei, "华文细黑", "Microsoft YaHei", "微软雅黑";
 	/*padding: 15px 5px;*/
 	line-height: 1.3;
 	font-size: 18px;
+}
+
+/* ================ 短代码CSS ========================= */
+/* Label 标签 */
+span.code_label_red{
+	background-color: rgb(255, 192, 203);
+	padding: 0 4px;
+	margin: 0 2px;
+	border-radius: 5px;
+	color: rgb(255, 20, 147);
+}
+span.code_label_green{
+	background-color: rgb(64, 224, 208);
+	padding: 0 4px;
+	margin: 0 2px;
+	border-radius: 5px;
+	color: rgb(46, 139, 87);
+}
+span.code_label_blue{
+	background-color: rgb(135, 206, 235);
+	padding: 0 4px;
+	margin: 0 2px;
+	border-radius: 2px;
+	color: rgb(70, 130, 180);
+}
+
+
+/* 提示消息 */
+p.code_warning{
+	background-color: rgb(255, 192, 203);
+	/*width: 80%;*/
+	margin: 0px;
+	padding: 10px;
+	border-radius: 10px;
+	color: rgb(255, 20, 147);
+}
+
+p.code_attention{
+	background-color: rgb(64, 224, 208);
+	/*width: 80%;*/
+	margin: 0px;
+	padding: 10px;
+	border-radius: 10px;
+	color: rgb(46, 139, 87);
+}
+
+p.code_explain{
+	background-color: rgb(135, 206, 235);
+	/*width: 80%;*/
+	margin: 0px;
+	padding: 10px;
+	border-radius: 10px;
+	color: rgb(70, 130, 180);
+}
+
+/*  下拉  */
+details.code_details{
+	background-color: rgb(127, 255, 212);
+	/*width: 80%;*/
+	padding: 10px;
+	border-radius: 10px;
+	color: rgb(0, 0, 0);
+}
+summary.code_summary{
+	cursor:pointer;
+	user-select: none;
+	color: rgb(0, 139, 69);
+}
+summary.code_summary::after{
+	transition:.3s ease-out;
+}
+[open] summary.code_summary::after{
+	transform:rotate(180deg);
+}
+
+/* 正文图片适应 */
+img.content_images{
+	max-width: 95%;
+	text-align: center;
+}
+
+/* 友链 block */
+div.friend_link_block{
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+/*	border-style: solid; 
+  	border-width: 2px;*/
+  	width: 100%;
+}
+
+div.friend_link{
+	height: 100px;
+  	width: 100%;
+  	text-align: center;
+}
+
+@media (min-width: 600px){
+	div.friend_link{
+		width: 50%;
+	}
+}
+
+div.friend_block{
+	width: 80%;
+	height: 80%;
+	background-color: white;
+	margin-left: 10%;
+	border-radius: 15px;
+	-webkit-transition: all 250ms cubic-bezier(0.02, 0.01, 0.47, 1);
+	transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+div.friend_block:hover{
+	box-shadow: 0 16px 32px 0 rgba(211, 231, 225, 0.15);
+	transform: translate(0,-5px);
+	transition-delay: 0s !important;
+}
+div.friend_block_shadow{
+	-webkit-box-shadow: 0 0.25rem 1rem rgba(211, 231, 225, 0.15);
+	box-shadow: 0 4px 16px rgba(211, 231, 225, 0.15);
+}
+
+img.friend_link_icon{
+
+	border-radius: 50%; 
+	float: left;
+	width: 75px;
+    height: 75px;	
+    margin-top: 2px;
+    margin-left: 10px;
+}
+div.friend_link_info{
+	margin-left: 100px;
+	/*border: 2px solid rgb(255, 102, 102);*/
+	height: 100%;
+	/*width: calc(100%-75px);*/
+	/*float: right;*/
+	padding: 5px;
+}
+div.friend_link_title{
+	/*text-align: center;*/
+
+}
+a.friend_link_title{
+	font-size: 20px;
+	/*position: center;*/
+}
+div.friend_link_details{
+	/*text-align: center;*/
+	color: #2c2a2a;
 }
