--- a/FC/assets/header.css
+++ b/FC/assets/header.css
@@ -35,6 +35,7 @@ ul.header_nav_bar li a{
     height: 30px;
     padding: 2px 4px;
     background-color: rgb(230,230,250);
+    opacity: 0.9;
   /*width: 28px;*/
   /*height: 30px;*/
   /*margin: 10px auto;*/
@@ -85,7 +86,12 @@ ul.header_nav_bar li a{
         padding: 0 10px;
         opacity:0.8;
         background-color: rgb(230,230,250);
-        
+          width: 100%;
+    }
+    ul.header_nav_bar li a{
+      width: 100%;
+      font-size: 20px;
+      display:inline-block;
     }
 
 }
