--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -148,6 +148,47 @@ div.postdiv{
 }
 
 /* ================== 主页文章卡片 ==============*/
+div.article_Card_Bg{
+	background-image: url(https://cdn.jsdelivr.net/gh/mybules/cdn@1.6.0/mybules/backgrounds/126.jpg);
+	background-size: 100%;
+	/*background-size: cover;*/
+	/* 固定图片位置 */
+	background-repeat: no-repeat;
+	position: relative;
+	background-position: center;
+	transition: 1.5s;
+	z-index:1;
+}
+div.article_Card_Bg:hover{
+	/*background-size: calc(cover*120%);*/
+	background-size:120%;
+}
+div.article_Card_Bg:hover>.fixed {
+	display: block;
+}
+div.article_Card_Bg_2{
+/*	width: 100%;
+	height: 100%;*/
+	background: inherit;
+    /*position: relative;*/
+}
+div.article_Card_Bg_2 >div{
+	/*position: absolute;*/
+    z-index: 11;
+}
+div.article_Card_Bg_2:after{
+	/*position: absolute;*/
+    background: inherit;
+    filter: blur(35px);/*为了模糊更明显，调高模糊度*/
+    z-index: 2;
+}
+
+/* 文章卡片的正文预览内容 */
+div.index_Card_Content{
+	/*filter:blur(1px);*/
+
+}
+
 a.articletitle{
 	text-decoration: none;
 	font-size: 28px;
@@ -209,32 +250,35 @@ ol.page-navigator{
 	display: inline-block;
 	list-style: none;
 	padding-left: 0px;
+	padding-top: 5px;
 }
 ol.page-navigator li{
 	display: inline;
 	text-align: center;
 	padding-inline-start: 0px;
-	margin:0 5px;
+	margin:16px 5px;
+	line-height: 1.8;
 }
 
 ol.page-navigator li a{
-	padding: 2px;
+	padding: 3px 6px;
 	/*margin: 5px;*/
 	color: rgb(255, 105, 180);
 	/*color: rgb(4,26,37);*/
-	background: rgb(4,26,37);
+	background: rgb(230,230,250);
 	text-decoration: none;
 	text-transform: uppercase;
 	text-shadow: none;
 	font-weight: bold;
-	border-style: solid; 
+/*	border-style: solid; 
   	border-width: 2px;
-  	border-color: rgb(255, 105, 180);
+  	border-color: rgb(255, 105, 180);*/
 }
 ol.page-navigator li.current a{
 	background: rgb(255, 105, 180);
-	color: rgb(4,26,37);
+	color: rgb(230,230,250);
 	text-shadow: 0px 0px 5px rgb(4,26,37);
+	border-color: rgb(255, 105, 180);
 }
 
 /* ============================= 正文 =========================*/
