--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -149,38 +149,38 @@ div.postdiv{
 
 /* ================== 主页文章卡片 ==============*/
 div.article_Card_Bg{
-	background-image: url(https://cdn.jsdelivr.net/gh/mybules/cdn@1.6.0/mybules/backgrounds/126.jpg);
+	background-image: url(https://cdn.jsdelivr.net/gh/mybules/cdn@1.6.0/mybules/2020-8-15-1/monv.jpg);
 	background-size: 100%;
+	position: relative;
 	/*background-size: cover;*/
 	/* 固定图片位置 */
-	background-repeat: no-repeat;
-	position: relative;
+	/*background-repeat: no-repeat;*/
 	background-position: center;
 	transition: 1.5s;
-	z-index:1;
+	/*z-index:1;*/
 }
 div.article_Card_Bg:hover{
 	/*background-size: calc(cover*120%);*/
 	background-size:120%;
 }
-div.article_Card_Bg:hover>.fixed {
-	display: block;
+.article_Card_blur{
+	/*z-index: 1;*/
 }
-div.article_Card_Bg_2{
-/*	width: 100%;
-	height: 100%;*/
-	background: inherit;
-    /*position: relative;*/
+.article_Card_bluru::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	/*width: 286px;*/
+    height: 32px;
+    /*top: 0;*/
+    left: 0;
+    background-image: url(https://cdn.jsdelivr.net/gh/mybules/cdn@1.6.0/mybules/2020-8-15-1/monv.jpg);
+    filter: blur(9px);/*为了模糊更明显，调高模糊度*/
+    /*z-index: 2;*/
 }
-div.article_Card_Bg_2 >div{
-	/*position: absolute;*/
-    z-index: 11;
-}
-div.article_Card_Bg_2:after{
-	/*position: absolute;*/
-    background: inherit;
-    filter: blur(35px);/*为了模糊更明显，调高模糊度*/
-    z-index: 2;
+.article_Card_blur_cont{
+	position: relative;
+	z-index: 1;
 }
 
 /* 文章卡片的正文预览内容 */
