--- a/FC/assets/main.css
+++ b/FC/assets/main.css
@@ -125,6 +125,9 @@ div.postdiv{
 .white{
 	color: rgb(240, 240, 240);
 }
+.font_black{
+	color: rgb(44, 42, 42);
+}
 /* 主题配色: 黑白; */
 .bodyTheme0{
 	background-color: rgb(240, 240, 240);
@@ -148,17 +151,13 @@ div.postdiv{
 }
 
 /* ================== 主页文章卡片 ==============*/
-div.article_Card_Bg{
+/*div.article_Card_Bg{
 	background-image: url(https://cdn.jsdelivr.net/gh/mybules/cdn@1.6.0/mybules/2020-8-15-1/monv.jpg);
 	background-size: 100%;
 	position: relative;
-	/*background-size: cover;*/
-	/* 固定图片位置 */
-	/*background-repeat: no-repeat;*/
 	background-position: center;
 	transition: 1.5s;
-	/*z-index:1;*/
-}
+}*/
 div.article_Card_Bg:hover{
 	/*background-size: calc(cover*120%);*/
 	background-size:120%;
